changed div of map to html instead of java to help prevent map load on mobile, added styling to upload button for mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -621,7 +621,7 @@ hr {
 
 #map {
   margin-top: 30px;
-  height: 70%;
+  height: 400px;
   margin-left: 30px;
   width: 85%;
   max-width: inherit;
